tests/ui/const-generics/gca/ambiguous-on-failed-eval-with-vars-fail.old.stderr
error: `generic_const_args` requires -Znext-solver=globally to be enabled
  --> $DIR/ambiguous-on-failed-eval-with-vars-fail.rs:9:12
   |
LL | #![feature(generic_const_args)]
   |            ^^^^^^^^^^^^^^^^^^
   |
   = help: enable all of these features

error: aborting due to 1 previous error

